Popup now works on mobile. Long city names no longer run into city score

--- a/app/assets/stylesheets/mobile_test.css
+++ b/app/assets/stylesheets/mobile_test.css
@@ -15,6 +15,7 @@ button {
   width: 40%;
 	position: absolute;
 	background-color: red;
+	transition: transform .5s;
 }
 
 .mobileLeft {
