--- a/app/assets/stylesheets/popup.css
+++ b/app/assets/stylesheets/popup.css
@@ -1,5 +1,5 @@
-#popup{
-  background-color: white;
+.popup{
+  background-color: #FFFFFF;
   display: none;
   position: absolute;
   overflow: scroll;
@@ -10,6 +10,12 @@
   -webkit-box-shadow: -6px 5px 35px 0px rgba(133,133,133,0.53);
   -moz-box-shadow: -6px 5px 35px 0px rgba(133,133,133,0.53);
   box-shadow: -6px 5px 35px 0px rgba(133,133,133,0.53);
+  /*transition: all 3s ease 0s;*/
+}
+
+.transform {
+  -webkit-transition: all .5s ease 0s;
+  -webkit-transform: translateX(-100%);
 }
 
 #reviewContent {
@@ -35,22 +41,22 @@ a:hover #x{
 }
 
 .cityNameAndScoreRow{
-  padding-bottom: 3em;
+  margin: 2em;
 }
 
 .cityName {
   text-transform: uppercase;
   padding-left: 0px;
   padding-top: 1rem;
-  padding-bottom: 2.5rem;
+  /*padding-bottom: 2.5rem;*/
   font-size: 2.2em;
   font-weight: 500;
 }
 
 .cityCircle {
-  position: absolute;
+/*  position: absolute;
   top: 6em;
-  right: .7em;
+  right: .7em;*/
   border-radius: 50%;
   height: 5em;
   width: 5em;
